<resources>
    <string name="app_name">PhoKimchiPower</string>
    <string name="loginTitle_login">LOGIN NOW!</string>
    <string name="emailPlainText_login">EMAIL:</string>
    <string name="passwordPlainText_login">PASSWORD:</string>
    <string name="loginButton_login">LOGIN</string>
    <string name="signupTitle_signup">SIGN UP NOW!</string>
    <string name="email_signup">EMAIL:</string>
    <string name="name_signup">NAME:</string>
    <string name="password_signup">PASSWORD:</string>
    <string name="terms_signup">I agree to give away my personal information</string>
    <string name="signupButton_signup">SIGN UP</string>
    <string name="textView_mainTitle">GRADESTRACKER</string>
    <string name="button_mainLogin">LOGIN</string>
    <string name="button_mainSignup">SIGN UP</string>
    <string name="password_hint">password</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="password_check_hint">password check</string>
    <string name="password_check_EditText_signup">PASSWORD CHECK:</string>
    <string name="password_check_PlainText_signup">PASSWORD CHECK:</string>
    <string name="emailTitle_TextView_login">EMAIL:</string>
    <string name="passwordTitle_TextView_login">PASSWORD:</string>
    <string name="addCourse_name">ADD A COURSE</string>
    <string name="textView_courseName_label">COURSE NAME</string>
    <string name="textView_weight">Weight</string>
    <string name="textView_weight2">Weight</string>
    <string name="textView_weight3">Weight</string>
    <string name="textView_weight4">Weight</string>
    <string name="textView_weight5">Weight</string>
    <string name="textView_weight6">Weight</string>
    <string name="main_courseName">COURSES</string>
    <string name="button_add_grade">Add Grade</string>
    <string name="back_to_main">Back to Main</string>
</resources>