<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/name_signup"
        android:layout_width="248dp"
        android:layout_height="85dp"
        android:layout_marginTop="112dp"
        android:ems="13"
        android:inputType="textPersonName"
        android:text="@string/name_signup"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/password_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="248dp"
        android:layout_height="85dp"
        android:layout_marginTop="200dp"
        android:ems="13"
        android:inputType="textPersonName"
        android:text="@string/password_signup"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupTitle_signup"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.080" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="248dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"
        android:ems="13"
        android:inputType="textPersonName"
        android:text="@string/email_signup"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/name_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/agreement_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/signupButton_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="18sp"
        android:paddingLeft="30dp"
        android:paddingTop="18dp"
        android:paddingRight="55dp"
        android:paddingBottom="18dp"
        android:text="@string/signupButton_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreement_signup"
        app:layout_constraintVertical_bias="0.245" />

</androidx.constraintlayout.widget.ConstraintLayout>