<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_mainTitle"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/textView_mainTitle"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/button_mainLogin"
        android:layout_width="113dp"
        android:layout_height="53dp"
        android:text="@string/button_mainLogin"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toTopOf="@+id/button_mainSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_mainTitle"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/button_mainSignup"
        android:layout_width="113dp"
        android:layout_height="53dp"
        android:layout_marginBottom="104dp"
        android:text="@string/button_mainSignup"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/button_mainLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mainTitle"
        app:srcCompat="@drawable/phokimchi" />

</androidx.constraintlayout.widget.ConstraintLayout>